testdata/fixtures/audit/negative/exec_user_input_neg_subprocess_array_py.py
import subprocess


def list_dir():
    subprocess.run(["ls", "-la"])
